--- a/new.html
+++ b/new.html
@@ -25,10 +25,10 @@
           sending you this virtual flower coz i cant be there but i promise you to be there 
           i promise you to give you a garden full of flowers 
           miss you love
-          <span class="Divi">
+          <span class="Your Name">
             Forever Yours,
             <br />
-            Divi</span
+            Your Name</span
           >
         </p>
         <div class="address">
